base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dev-koo-api
spec:
  ports:
    - name: http
      port: 8080
      targetport: 8080
      protocol: TCP
  selector:
    app: dev-koo-api
